--- a/Semana 0 - Search/style.css
+++ b/Semana 0 - Search/style.css
@@ -1,16 +1,15 @@
-
+.default_font{
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .hipervinculo {
     color: rgba(0, 0, 255, 0.658);
-    padding: 5px;
+    margin: 5px;
     text-align: right;
     text-decoration: solid;
     
-    display: list-item;
-}
-
-.default_font{
-    font-family: Arial, Helvetica, sans-serif;
+    display: block;
+    
 }
 
 .hipervinculo:hover {
@@ -19,6 +18,7 @@
 }
 #Hiperviculos {
     text-align: right;
+    margin: 10px;
 }
 
 .button {
@@ -31,10 +31,9 @@
     height: 36px;
     min-width: 54px;
     font-size: 16px;
-    margin:20px;
+    margin:10px;
+    margin-top: 15px;
     
-
-
 }
 
 
@@ -46,20 +45,37 @@
     font-size: 16px;
     color: black;
     
-    
+    outline: none;
     text-indent: 5%;
 
     border-radius: 25px;
     border: 1px solid rgb(180, 180, 180);
     
-
-
+    margin-top: 20px;
 }
+
+
+@media (max-width: 500px) {
+    .search_bar { 
+        width: 350px;
+    }
+}
+@media (max-width: 350px) {
+    .search_bar { 
+        width: 280px;
+    }
+}
+
 .search_bar:hover {
     
     box-shadow: 0 0 0 2px rgba(88, 88, 88, 0.2);
     
+    
 }
+
+
+
+
 .button:hover{
     color: black;
     border-style: solid;
@@ -81,8 +97,10 @@
 #google_logo{
     height: 92px;
     width: 272px;
-    padding: 100px;
+    margin-top: 109px;
 }
-h1 {
-    color: blue; 
-}   
+
+
+/*
+Bootstrap
+*/
