Finished auction webpage.

--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -11,29 +11,101 @@ body {
     color: #212020;
     text-decoration: none;
 }
-#listing img  {
-    width : 400px;
+
+#listing img {
+    width: 25vw;
     vertical-align: top;
     padding: 5px;
     display: inline-block;
 }
-.listing_text{
+
+.listing_text {
     display: inline-block;
     padding-left: 20px;
     padding-bottom: 10px;
-}
-.listing_text h5{
-    padding-top: 10px;
-}
-.listing_text p {
-    color : dimgrey;
+    max-width: 70vw;
 }
 
-.listing_desc{
+.bid_form {
+    width: 30vw;
+}
+
+.bid_button {
+    margin-top: 10px
+}
+
+@media (max-width: 900px) {
+    #listing img {
+        width: 400px;
+    }
+
+    .listing_text {
+        max-width: content-box;
+    }
+
+    .bid_form {
+        width: auto;
+    }
+}
+
+.listing_desc_deta_flex_cont {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.listing_desc_deta {
+    margin-left: 50px;
+    width: 600px
+}
+
+.listing_desc_deta p {
+    color: dimgrey;
+}
+
+.listing_details {
+    display: flex;
+    width: 45vw;
+    margin-left: 20px;
+}
+
+.listing_text h5 {
+    padding-top: 10px;
+}
+
+.listing_text p {
+    display: flex;
+    width: 45vw;
+    color: dimgrey;
+    padding-left: 20px;
+}
+
+.listing_desc {
     color: black;
     padding-left: 10px;
 }
 
-#listing_pic_div img{
+
+#listing_pic_div img {
     height: 400px;
+}
+
+.logo img {
+    max-height: 150px;
+}
+
+.top_bar_flex_cont {
+    display: flex;
+    height: 200px;
+    align-items: center;
+    justify-content: center;
+}
+
+.top_bar_flex {
+    display: inline-block;
+    margin-top: 75px;
+}
+
+.div_history {
+
 }
