--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -1,22 +1,25 @@
 {% load static %}
+{% load bootstrap4 %}
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{% block title %}Auctions{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    </head>
-    <body>
-        <h1>Auctions</h1>
-        <div>
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
-        </div>
+<head>
+    <title>{% block title %}Auctions{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <script src="https://kit.fontawesome.com/85f060f833.js" crossorigin="anonymous"></script>
+
+</head>
+<body>
+<div class="listing_desc_deta_flex_cont">
+    <div class="">
+        <a href="{% url "index" %}"><img src="{% static "auctions/logo.png" %}" alt="AUCTIONS" class="logo"></a>
+    </div>
+    <div class="top_bar_flex">
+
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
@@ -24,6 +27,28 @@
             {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "show_watchlist" %}">Watchlist <span
+                            class="badge badge-primary badge-pill">{{ watchlist_size }}</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "categories" %}">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "random" %}">Random</a>
+                </li>
+
+                <!--Vertical divider-->
+                <li class="nav-item">
+                    <p class="nav-link">|</p>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "new listing" %}">New Listing</a>
+                </li>
+                <li class="nav_item">
+                    <a class="nav-link" href="{% url 'past_listings' %}">Past Listings</a>
                 </li>
             {% else %}
                 <li class="nav-item">
@@ -34,8 +59,18 @@
                 </li>
             {% endif %}
         </ul>
-        <hr>
-        {% block body %}
-        {% endblock %}
-    </body>
+    </div>
+</div>
+<div>
+    {% if user.is_authenticated %}
+        Signed in as <strong>{{ user.username }}</strong>.
+    {% else %}
+        Not signed in.
+    {% endif %}
+</div>
+<hr>
+
+{% block body %}
+{% endblock %}
+</body>
 </html>
